# Kynetic

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
Include/: pch.h
Include/Engine/: App.h
Source/: main.cpp
Source/Engine/: App.cpp
assets/models/: bunny.glb
assets/models/bistro/: Bistro.gltf
assets/shaders/: clear.slang  cull.slang  debug_line.slang  debug_meshlet.slang  debug_solid.slang  depth_pyramid.slang  lit.slang  mesh_cull.slang  mesh_lit.slang  shader_shared.slang  triangle.vert
game/: CMakeLists.txt
game/src/: main.cpp
kynetic/: CMakeLists.txt
kynetic/assets/models/sponza/: Sponza.gltf
kynetic/assets/shaders/: cull.slang  frustum_cull.slang  gradient.slang  lit.slang  mesh_lit.slang  shader_shared.slang  shader_types.hpp  triangle.frag.slang  triangle.vert.slang
kynetic/src/: clusterlod.h  imgui_utils.hpp  magic_enum.hpp  mikktspace.cpp  mikktspace.h  pch.cpp  pch.hpp  shader_types.hpp  vma_usage.cpp  vma_usage.hpp
kynetic/src/core/: components.hpp  debug_renderer.cpp  debug_renderer.hpp  device.cpp  device.hpp  engine.cpp  engine.hpp  input.cpp  input.hpp  renderer.cpp  renderer.hpp  resource_manager.cpp  resource_manager.hpp  scene.cpp  scene.hpp
kynetic/src/rendering/: command_buffer.cpp  command_buffer.hpp  descriptor.cpp  descriptor.hpp  descriptor_allocator.cpp  descriptor_allocator.hpp  descriptor_writer.cpp  descriptor_writer.hpp  device.cpp  device.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp
kynetic/src/resource/: base.cpp  base.hpp  shader.cpp  shader.hpp
kynetic/src/shaders/: gradient.comp
src/: main.cpp  pch.cpp  pch.h
src/Engine/Core/: App.cpp  App.h  Window.cpp  Window.h
src/Engine/Renderer/: Buffer.cpp  Buffer.h  CommandPool.cpp  CommandPool.h  Common.h  Device.cpp  Device.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h
src/Engine/UI/: ImGuiRenderer.cpp  ImGuiRenderer.h
